[package]
name = "hex_str"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.4", default-features = false, optional = true, features = ["min_const_gen"] }
serde = { version = "1", default-features = false, optional = true }
thiserror = "1"

[features]
serde = ["dep:serde"]
rand = ["dep:rand"]
