[package]
name = "hex_str"
version = "0.2.0"
edition = "2021"
categories = ["value-formatting", "parser-implementations", "data-structures"]
license = "Apache-2.0 OR MIT"
keywords = ["hexstring", "hex", "string", "str", "hexadecimal"]
description = "A library that helps handle hexadecimal strings of specified length"
documentation = "https://docs.rs/hex_str"
repository = "https://github.com/vmdln/hex_str"

[dependencies]
rand = { version = "0.8.4", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.4"

[features]
serde = ["dep:serde"]
rand = ["dep:rand"]
